--- a/login/src/css/register.module.scss
+++ b/login/src/css/register.module.scss
@@ -9,8 +9,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
-
   border: 1px solid #fff;
 
   h2 {
@@ -27,7 +25,6 @@
       padding: 0.2rem;
       
     }
-
   }
 
   button {
@@ -43,6 +40,40 @@
         filter: brightness(0.7);
         cursor: pointer;
       }
-  }
+  }  
+}
+.success {
+  
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 
+  width: 100%;
+  height: 2rem;
+
+  font-size: 1.2rem;
+  font-weight: 600;
+  background-color: #58da74;
+  border-radius: 0.6rem;
+
+  margin-top: 3rem;        
+ 
+}
+
+.error {
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  width: 100%;
+  height: 2rem;
+
+  font-size: 1.2rem;
+  font-weight: 600;
+  background-color: #fc3737;
+  border-radius: 0.6rem;
+
+  margin-top: 3rem;        
+ 
 }
