Add context for acess control, add new page view welcome. Update files with the changes and provision acess with authenticated token.

--- a/login/src/css/register.module.scss
+++ b/login/src/css/register.module.scss
@@ -26,11 +26,15 @@
       
     }
   }
-
+  .buttonOptions {
+    display: flex;
+  }
+  
   button {
       width: 100%;
       height: 2rem;
 
+      margin: 0 0.2rem;
       border: none;
 
       border-radius: 1rem;
